force-app/main/default/objects/Claim_settlement__c/Claim_settlement__c.object-meta.xml
<CustomObject>
    <label>Claim settlement</label>
    <nameField>
        <label>Claim settlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim settlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>