force-app/main/default/objects/Claim_settlement__c/fields/Claim_Event__c.field-meta.xml
<CustomField>
    <fullName>Claim_Event__c</fullName>
    <label>Claim Event Date</label>
    <type>Date</type>
</CustomField>