force-app/main/default/objects/Claim_settlement__c/fields/Converted_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Converted_Amount_USD__c</fullName>
    <label>Converted Amount (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>