force-app/main/default/objects/Claim_settlement__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <inlineHelpText>Based on USD</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>